@@ -8,14 +8,18 @@ DIST qsstv_8.1.17.tar.gz 634880 SHA256 2184fe9b8c1113d3e14eab786b47d7e15881c73bf
 DIST qsstv_8.2.7.tar.gz 655360 SHA256 85dff982ac64586e49c5472109a2dfbb17cd4598f2bb390169367da76eba6c82 SHA512 d45327be42f2ff78b8ca9c442cdac16438ae24ab91aed6706bd73bd91371ffaa66f80b116287a7a60861af51d02f35ef5375769193fc5f07c135aa501d00cd4f WHIRLPOOL 17aba4d706a091354f0a904bfc4728fef53a32848be532db204688f836957fbb9ac981a77db2440292297cc57e957c6ff5b1c36d5f4191638c0300a744ba8bd3
 EBUILD qsstv-7.1.7.ebuild 1052 SHA256 9064426ae1e5755de7199f3f020f93f5c9949b07505d4c09b9933626598c0f37 SHA512 7fac948e739ca08e2af7c0eb24555fe829d362306d151799f92f585b519aed06c0a0a7cbeb16c9e64ea46e4b0d15cdd6b2b828ffd48c5a26b7102ddc883498de WHIRLPOOL e8abacab7f83be81016ac74c1de0880fdd18cd065584b0e33e5003e8faa19a2a80ae20c3d4e02d6e5f1d545cf2a056a8eebce4ea9d75eacc55e93cd83c338a86
 EBUILD qsstv-8.1.14.ebuild 877 SHA256 5e1b2e459339808030cb93d779e36b2f6f0781ae61231319d8d743acf62b9e9d SHA512 e8763ea2c0d6ebffa15ee424cf05a32f26d6c8fcf5a1471445671b4d314ed3c5b304bb56915f5c672505a942145b3a64b7f92e71d3dadd8f3365f650651e3b4f WHIRLPOOL d0abaa734a684f011d20aa6e66f75c928092ebf92959c0f74485f00061f5105718e3faea605d12632ccfe8d8c1aa05339f86abe083b11f51a35d35d7811098e6
-EBUILD qsstv-8.1.17.ebuild 873 SHA256 bf9b0217fe1dd766c522211eeec1ae26a05c8cc3a58be0b61375150737198bf0 SHA512 96d317701173e3d4c774238daadb9f338a35453325ee8d73216d11b4163fa2cbdedd2fa95f88982a97de87835859f50f9f7cdabc50deca7a3b6972493bac4437 WHIRLPOOL 2aceda88cdd4b966661e1fdd42006895df28f57dcb35dada10fdf927a11909c582ce77af7d58f8a21989db0fa284232f9851830e40f2018dfbc2b64544295075
+EBUILD qsstv-8.1.17.ebuild 872 SHA256 110d9347537d72e770c06828dab5c544ed593856fac51dacdcaefd0acc70b696 SHA512 8bc108b9b616d685840837d98cd1e32550f2d7de5c9aa39d83e3e15abbeddd546c0264786db347cb464c80feac749435b87f055fa9e6e7f9155638e805e3230b WHIRLPOOL 52858e920a80674878b3e9f7697e090a4cb9c341609f56c0a657a72deff5d9c2e3848a0e593bdf4dd3299a3ebf69a0cf8e88f34b3907840f40306d5ecfde786f
 EBUILD qsstv-8.2.7.ebuild 872 SHA256 4db1aafde3a50defeb23e4ea251e7b7a4cbf408cd4ad8c7a1874385edaafd6b7 SHA512 3d821a43442b7ec247cad6cb4575170f134dcd2877fc9b9da5714e7f44d52b1f7ae5105ca990968740d4d9e6b6728a8790f4ee1a61df7a3f4f8b3aefbefe813c WHIRLPOOL 2c6d8e25fdfee31d7c025b7eb4e33f578b484ca4c556e15dcdeebf58cdb4d1c55e9329c75c35764c9c6e81a803d06117f0f8fe424fa6aaadaad4c22088944aba
-MISC ChangeLog 1807 SHA256 3f9b26fd7b7adf91eefd21a381bb98356b7da63ded76762a4d81edd5219203aa SHA512 0dc83872113d662d8d25ffc64bb0530ce0a595e61628d14cfb389c05ee0c30476db4f49f4fb55c471d3e87ed01514a9511329469c938ce78ff97119b8c316c12 WHIRLPOOL fb151746634a0a8a6756303cf5ec5cddfadb868172502b6d2ccecc2e49f04c6d023e250bd892c64cd76b5614aab5d0dcae9131641a3f0896ef6a3e0d1ca62bca
+MISC ChangeLog 1912 SHA256 a95d1329a4a617b90a753d8634fc18296ee0b4b040efbb5405bb8cc03d9d0485 SHA512 9470f5a83a340d40479dceba51214505b28d1a1944fbcad75cf5dd94e1758f4323d338fcf7f86f42238ddabd93c2e6fa8d3e80646313d89ac6074829a0cbd656 WHIRLPOOL 2a714810e04df144e6220ca24a18703f18c8ba80f6969b0846361f9693420b6b31e64d74428be13c6aec94087a9f539ef77401a8bae0b114021ff9cc1c536e48
 MISC metadata.xml 299 SHA256 d4552cc67580dc5b287f559941b70575e524d199805e67cf46bb98b8e86d0382 SHA512 0235af55cb52ad24cf96e17e52a2d54101781ef468d2fb8fb151bbcd7f156703d5b775fbeff6ca8831e063690fe0d3e71e673d250efcfb74a8b7e0419c8563f2 WHIRLPOOL 3de5e803e3dd9647bfe065895f4be749169c4b4b2ea815f041c13662fe61e08aa270715e54b13ff9ffda559a85cc75f1b330acf2c536ea7e318f36b501d836cf
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlNQCJEACgkQQe4uqXYgU9WrUQCeKD/S2w9INDDZALvF3WOmduOE
-oNwAoND2uo4bXHuycPeEr2pn+ghQalVy
-=2Kt4
+iQEcBAEBCAAGBQJTliZiAAoJEA2sAkrWKOU2kk0IAIeo9a66e3sHWDdVrepAaTBC
+HLF445UIIpJvaKGS/Vl+4LA+q7EQDicutIl6TR1VEbIA8aekYgzwnAVwSfQ5GOPY
+3ZYqxQKgJYayMIpbYFhFkBi4HQaO5hvXCcJ98TxsZ+AvGvU2/UYIcNEziUMxIWWg
+CeuqRYINkCPjZ6gwV0qYBuLpW7Pd2SrJ6QscjPkxeFpFgj569qUMMzW/21yJ9O2q
+9Coz/hMWpinZ442NKbkmcr9L5Mq7ggcVpvSt+xDrVQ5HE265EClejI9GxUET1vnn
+k25wbDU+Zr3O0FuLamZBzTBICsbb8kAAht9hTOG4Zl0NTwzgN4Ozowwl4BPxm1E=
+=5Iao
 -----END PGP SIGNATURE-----
