@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/qsstv/qsstv-8.1.17.ebuild,v 1.1 2014/03/13 10:04:57 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/qsstv/qsstv-8.1.17.ebuild,v 1.2 2014/06/09 21:24:49 nimiux Exp $
 
 EAPI=5
 
@@ -14,7 +14,7 @@ SRC_URI="http://users.telenet.be/on4qz/qsstv/downloads/${MY_P}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE=""
 
 DEPEND="dev-qt/qtcore:4[qt3support]
