@@ -7,14 +7,18 @@ DIST tlf-1.2.0.tar.gz 509534 SHA256 b0e42e14ae877b5a7693de2afef16d61fa9807e2fb0a
 DIST tlf-1.2.1.tar.gz 511959 SHA256 a7969aa56bc705db75d8deca92517485f6366169800fa7eaec5bfb51455abfac SHA512 f27d8e4c8643335ec3c6f96179ca6ac733b72fbdb544560947d840f176711aba4525d86a6e0d119c8a96303af6ccd423815151ef6c428240aca4a6714d921ef1 WHIRLPOOL 263643a9d3bf75def89af5fb2878fe105cf9c212cc0810840982a9f566af84242e6dd38389d59667d4635c1bfeb13366dcc88c1ed1dda2d97ee8882253772bcb
 EBUILD tlf-1.1.5.ebuild 689 SHA256 8990964df1ade37d0afaf7fe40afc69b62b6148c4f9ca70b67d598c60ff4e0ca SHA512 a227193d7a07f250247ea63a2495a286aaff307a20dff1205dffcca2a542471616eaf945fcf32fc4758af320fdf47649326bee3e043804c455a227ab330a8ec3 WHIRLPOOL 2d7f70b7dc4af23d1ec0987ca64f51ab538a003f7cf017a87f61fc65031f5b09f11913cb71ae390240cd7eacb263e146b111e31bda8a904beb2ce74c0ad380a6
 EBUILD tlf-1.1.6.ebuild 690 SHA256 e68cd2f0447a13a35cbebe70ceb461473ad874c07a9faf5dd9a1e06dd6886204 SHA512 9d6246da1f9f1fe339b374b8ae6bcb2c274dd6636b27addedf571be90797f6df9b287b0d5c968629a6ceb2c52bb8e237f330d052471ba9ca83df42429ba4d47f WHIRLPOOL 8ed512f80944fa75b5a544055894758df52f44c9d2b88eba2797c950d49c96a51254ad9cf4d4a73258aba0b1cfb5e5048161d79e6e9f02f26fc0fe31d8a0cfdb
-EBUILD tlf-1.2.0.ebuild 695 SHA256 945064d7d0d76b3853628bec5fd4824f3f4f8c9d90be99d8fb28e269fd6fc1da SHA512 e6fb50938a36864e63c78bc3070ed33fffc5259c52dbbb6641e226784ce1ace8a5bf713137f297c824f7e8a6fa3fa2828b62230a0ebbbcda7b81340ed8e78ccb WHIRLPOOL 4899f9a6e034e184009a3477d357676a9a7022f83a9897308414cd6e315e367eaf054f3de1ac318c60a71a44051cec2915d509b6085cc95a7f9fad0ee8fc240c
+EBUILD tlf-1.2.0.ebuild 694 SHA256 90fb25bbf04fdae5b4f46973d61eb29d5958540a80d54965f0cea881f35c9070 SHA512 ada10c9216d813d4e5745dcd7380ccb84c311565842858cd4a567e5431d03f1e1f309332c78d7b0eefb0eedd0b590b7d3bea7d35381f49c749314f6b5d9749d7 WHIRLPOOL 95539dde9072bdc833d42bd448791187e069ab97781f95098c9c653b7ead2c6faae21506c41b279dba866394ed6bab47364dbafb4df266b27edc091b33dce10f
 EBUILD tlf-1.2.1.ebuild 695 SHA256 c6b8a57ecedc5cbe494832c251fd009b15b5542afe241d158a963363d516aeb7 SHA512 8ebe3aca76f854ae7f3a2a4dabaaa5dfe86b012de7c69cac1c5a6b66ac7c4d8c8955576f61c39fb930d22ef2f0529d634dbb6f8a296e6cf7bb160c7053ca3f47 WHIRLPOOL 640d4a3822715dd60854e8b27e12f608e0f4f6eb8efe4893189f63cf32311bc0cb262d3035c409880ecb2432bd96d6911af9b112059f67809de7c1bdb8bf263d
-MISC ChangeLog 8658 SHA256 b8b930aca085c29c3486201c74cb6b407861d2a8bcb5f1a2ebb0d36e2dd28ddd SHA512 de304009fc4d7684ef34f8ef98a5adc4144b330ed0bdb81fbc2d3b936a85317cc93397d17caf09298e00e6af35dc4cd03afd6d878affef77946c15aa029f552c WHIRLPOOL ebf8cf89c76cadbc599b1446992c7eb55b1bd79186ded664f550b5a9a58a8cfabe4bbe1950db1cb51b5fb80980665cf7e744f94364d2680127e52dfddd94d717
+MISC ChangeLog 8760 SHA256 07e9ee92acc8f5d3ee1d800a3f512cd8bffbaa51b68ea6f7b8245d3d406d61b4 SHA512 5b00ae41497b4d6dc10781b8e950f02e4f102690f47eafeb369aa4a2901adc55be25c39232d3fcd7bae939bdab1ca89dd416e70d5f7149fc0cb32bd9e95df284 WHIRLPOOL 5e9788797f6d0c36382d2ef9c4974beade16ce73fb5ef6ec526f466776fcca9d91c7cb287f4735f19ccf1a62ac2ad5a456ba04c54f8c4d04a3052ab5bb99a446
 MISC metadata.xml 235 SHA256 ae15692b7066faecf636a6f882d1b44a4fb1e6357ba1c0a91b5753d43eb0139d SHA512 b9faad5ebd8050835c9acdd103ac79a026077fa2aa89530e6cd0f0c8c5b1afd2cf0fac187a85ed8dc1d901a17157ea0ca468985b2a16099ea49a20cfe25c5ca1 WHIRLPOOL 835fdc49a180de4347ea082036705ed23eac16b53de2cff4b88a876eface5233f3b87cb60fca00e3577862a55fa8f385e117c3493b2ae595e3ec755c8d93fb42
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlN1maEACgkQQe4uqXYgU9WKlwCgy1Q++NWSqrUxshcgZby3S/3X
-CQAAn0Kbv2bjJww/gC3Xs4L9BdWuiUKT
-=UxDd
+iQEcBAEBCAAGBQJTlicGAAoJEA2sAkrWKOU2GW0IAIY1DbWk76EuM96sDRh/d6+X
+xM4WuxfziuxgrXFsjiF3OiCwt9wvDynTjEqu0Xr7aNJrYW12UnxwQrOaFSyfrCTW
+7NDEbThNGXgieUfATZkppdXcDA+fx9w/36BmuzbqUvpltc0o/Yxkvj+BRXtoX6ov
+EN513guOcdR6k5fVFD5lsZmA1yPhNs1ZMXt64LBbREx3lYG1YD71I9beql4Ha244
+5+wIQp7PTvuMeDiRAcGXDSqC5ZWVfszBdpclQ3hEVyuxhlgg9MwbwHjcPDJKNn5q
+IZjIpZRkcdGR+gDAgW9in3TezrGQbjZLsGNAhuVUz3I62Y+nzeXp/M3gf5GUrRk=
+=hx+g
 -----END PGP SIGNATURE-----
