@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/tlf/tlf-1.2.0.ebuild,v 1.1 2014/02/23 16:32:38 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/tlf/tlf-1.2.0.ebuild,v 1.2 2014/06/09 21:27:35 nimiux Exp $
 
 EAPI="5"
 
@@ -12,7 +12,7 @@ SRC_URI="http://www.hs-mittweida.de/tb/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~x86"
+KEYWORDS="amd64 ~x86"
 IUSE=""
 
 RDEPEND="sys-libs/ncurses
