@@ -6,13 +6,17 @@ AUX xdx-gtk-2.20.patch 1308 SHA256 1deeb2da14e1ab471c7ec76a861423a7549d71491c8c1
 DIST xdx-2.4.2.tar.gz 284792 SHA256 ba6e66a248c61a52349881e2c2ea3324840b0acc0419a85f12a49f00ca9d121a SHA512 59ddf00b607f392229481c7e63ff94b01950e69827a64da15c063cb83a8a0f567aadd908db97ad879fbd5cb62b5844e9806f960f5972be94bd5436cfe7ed23f9 WHIRLPOOL 0f6cd1159c76a69d7d582cb9ca84d06cd37474e00a397e7f25f7c3303dc86ac313aadee8595aa15a8a5f762f41f1d4ae4c0b48bbcca759548e5d57221c7be473
 DIST xdx-2.4.3.tar.gz 324178 SHA256 fc6e49a2c2a9d7c729acf68e659bf8f5ebd402dc3be0f781bd50b8b76b01427c SHA512 b121e1ae45edc08d4c9331f877120fab8c0ed80fab9b90516e0ea29fc1055715b9f27d492dcebd8a20288dc785a2341a15a8052e89d5f75f6609b03c827709cb WHIRLPOOL 45712dd0da1faf546b7f45f9fea8c6f29b22e5cfd09ee47d870f30d24d53936818d963cb4ed0816b98041b3f44e4e728be018bcbad55e802fef9f3fdb13e07b9
 EBUILD xdx-2.4.2.ebuild 1282 SHA256 f9e521468be2c373774ee065ccc20e53b3b7176ea173489502265d39d74f8c94 SHA512 9e1a92ae75a4be0f66955edcc9e21a91d4491d38561e7716171d28488cd061a6b1be3ca2c64b0c9eee66fc187521f2f37f654d97c5bf6eda3767e422c314afd1 WHIRLPOOL 4a086fc0e474c5eb9f2c3f58c157416edb12bb03b7270d12015cdf735ba0c17edb714a9b32091b65fdd80f92b365eeade3223df59c479e45d5375d0d89544acd
-EBUILD xdx-2.4.3.ebuild 885 SHA256 7dfc73c89418b8c3aefbd2b47cae6726162a4c5a265921693131207e60f4f3c4 SHA512 7a6402bbbba368455d74a230b10bf76f64a80faa49cbace15be148954a026655d43ef4cafc5c303348504261933757401bb3532493919a4c370229ea0bf193f3 WHIRLPOOL 5645285edae10a337ab11b1251bb47282a65671d373900b2383d14f8fd0519f971623e3dac6ba9c26632b0bad588f49a363861c2875d8009a4abbd2808e52de3
-MISC ChangeLog 3433 SHA256 e25a9c3ea69abb90c0dd1246f14786dc70575045495cb768211821ea6fcf0ba5 SHA512 022b9e8c419b1d11265b1326e572e52f1ff371c0cc022655616318561277385b57c3475a6f3b726389d5ef430b48d1a81a33f12d040340d24cec0c3c2c2b3a98 WHIRLPOOL 84e5882c33c41d5e920040b444d59c3aa52cc91b5328512e93a3958ebd9cab9ddb584dfb447fbd3635606b2e4de5412c7f806c8eec200b699edb5567c9b341ce
+EBUILD xdx-2.4.3.ebuild 884 SHA256 3f28aad341745cb26d732d437b74c917b3a8f4c2c8c748b1affcfd18f28006d9 SHA512 234a43589586f48eb895abb16aff78ea192f848c50622c208977ec9265dbc3ce989b8777a086e070794e9b8349511e49b7746c6ed054b6cf68b956e68a9024f5 WHIRLPOOL 12fb1bbcb97ba70633509dd763bf307cfac27520756be180dabe3d0fc277f4b6c63ea6e823b5ff799add25580f27847b21087339fa6fe0d9107e7dde38839c8e
+MISC ChangeLog 3535 SHA256 1c2c54c476120d69e47f4ede6947b304c11d59691c6ac078dee1d4139dd60fc6 SHA512 b69fa9c5caf96f88acb6aa32f20975cf0360fe12062a66a2976230ca9886691f87c1f6f29ddb4c534bf7e34252c36d66645aed8cf2a3cdcca4770121d4628da3 WHIRLPOOL f16fde9918c6db2a0ff6246683975648c6768e79d76156612e93e22a5f8fa8f243a847162aef52524e9bd1740833e2c6852aa54ce00a27300230d1d06d54ceb0
 MISC metadata.xml 235 SHA256 ae15692b7066faecf636a6f882d1b44a4fb1e6357ba1c0a91b5753d43eb0139d SHA512 b9faad5ebd8050835c9acdd103ac79a026077fa2aa89530e6cd0f0c8c5b1afd2cf0fac187a85ed8dc1d901a17157ea0ca468985b2a16099ea49a20cfe25c5ca1 WHIRLPOOL 835fdc49a180de4347ea082036705ed23eac16b53de2cff4b88a876eface5233f3b87cb60fca00e3577862a55fa8f385e117c3493b2ae595e3ec755c8d93fb42
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlL0e5wACgkQQe4uqXYgU9UqpgCdHw7jNOxk15UA3+gylg68qil6
-hLYAoIMLMkWh25Fg/sUAQMtbEdW8XhE7
-=yXn9
+iQEcBAEBCAAGBQJTliegAAoJEA2sAkrWKOU2atkH/iwF4dLqomFuEzCkbNCToh5X
+hA54//GmY/BqDP8smDQ7TCpVrFDe2u6He6tfXIE8IM9Fgw4XTqsElLM8dvOET8ap
+qmjmc4gUDRZgFSbQGpiFnd6wy0Ll2G3Ds0JUyu7YTGf6mnTfFE6hjY6LQ14g4kVE
+sxZ6RB8ryEFs2nv3Dc12jB24mZnYsB5dJVF8wqgjqdik/dyGhfNcTqQUj4By/Eu+
+Le4ZvDDE0XGSqs5Gfyy36cNy23hjOlrGQvKR7e8uVD0+Tyf3dAka4OKSi+V+mNXb
+Q03AyZq+yPgX6P20Vct9xqnSMu/SA2Hm74rmRNqndg3kxpx+1FH4sdX9AqQ4/a4=
+=rof+
 -----END PGP SIGNATURE-----
