@@ -3,10 +3,10 @@ DEPEND=sys-libs/ncurses dev-libs/glib:2 media-libs/hamlib media-sound/sox
 DESCRIPTION=Console-mode amateur radio contest logger
 EAPI=5
 HOMEPAGE=http://home.iae.nl/users/reinc/TLF-0.2.html
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=sys-libs/ncurses dev-libs/glib:2 media-libs/hamlib media-sound/sox
 SLOT=0
 SRC_URI=http://www.hs-mittweida.de/tb/tlf-1.2.0.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	flag-o-matic	9a539029fe1d390c1828ff633baf26b5	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=f0213ce401340f430755f2e9f456fe4f
+_md5_=971fb475d7f3af7a0f8495b49d75f5a2
