@@ -4,10 +4,10 @@ DESCRIPTION=a GTK+ TCP/IP DX-cluster and ON4KST chat client.
 EAPI=5
 HOMEPAGE=http://sourceforge.net/projects/xdxclusterclient
 IUSE=nls
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 ~x86
 LICENSE=GPL-2
 RDEPEND=>=x11-libs/gtk+-2.12:2
 SLOT=0
 SRC_URI=mirror://sourceforge/xdxclusterclient/xdx-2.4.3.tar.gz
 _eclasses_=eutils	025442f2eecab39ad0b4e541b6e142af	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
-_md5_=488e78c93222aabc9a212ba0897db20a
+_md5_=997d858b8617fa6febdb40d33a4fe847
