@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/tlf
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/tlf/ChangeLog,v 1.51 2014/05/16 04:52:35 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/tlf/ChangeLog,v 1.52 2014/06/09 21:27:35 nimiux Exp $
+
+  09 Jun 2014; Chema Alonso <nimiux@gentoo.org> tlf-1.2.0.ebuild:
+  Stable for amd64 wrt bug #507964
 
 *tlf-1.2.1 (16 May 2014)
 
