@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/xdx
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/xdx/ChangeLog,v 1.28 2014/02/07 06:22:12 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/xdx/ChangeLog,v 1.29 2014/06/09 21:30:09 nimiux Exp $
+
+  09 Jun 2014; Chema Alonso <nimiux@gentoo.org> xdx-2.4.3.ebuild:
+  Stable for amd64 wrt bug #507996
 
 *xdx-2.4.3 (07 Feb 2014)
 
