@@ -1,6 +1,9 @@
 # ChangeLog for media-radio/qsstv
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-radio/qsstv/ChangeLog,v 1.18 2014/04/17 16:59:53 tomjbe Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-radio/qsstv/ChangeLog,v 1.19 2014/06/09 21:24:49 nimiux Exp $
+
+  09 Jun 2014; Chema Alonso <nimiux@gentoo.org> qsstv-8.1.17.ebuild:
+  Stable for amd64 wrt bug #507926
 
 *qsstv-8.2.7 (17 Apr 2014)
 
